--- a/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
@@ -92,7 +92,7 @@
                  				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-list-details"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13 5h8" /><path d="M13 9h5" /><path d="M13 15h8" /><path d="M13 19h5" /><path d="M3 4m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /><path d="M3 14m0 1a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z" /></svg>
 							</div>
 							<div class="card-body text-center flex-grow-1">
-                   				<span id="">You are also using this option :</span>
+                   				<span id="">This additional option is in use :</span>
 								<br><br>
 								<span id="selectedOption" class="text-secondary fs-2"></span>
 							</div>
@@ -403,12 +403,12 @@
 	              // Display the currently selected option data
 	              if (subscription.optDtlsCd > 0) {
 	                $("#selectedOption").text(
-	                  "+ " + subscription.optDtlsCd + " Users"
+	                  "+ " + subscription.optDtlsNm + " Users"
 	                );
 	                // we make the text bold
 	                $("#selectedOption").css("font-weight", "bold");
 	              } else if (subscription.optDtlsCd === 0 || subscription.optDtlsCd === null) {
-	                $("#selectedOption").text("No option selected yet");
+	                $("#selectedOption").text("No additional option.");
 	                $("#selectedOption").css("font-weight", "bold");
 	              }
 	            } else {
