--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
 	<div class="page-wrapper" id="page-wrapper">
-		<div class="container" id="'container">
+		<div class="container" id="container">
 			<h2>[[${menuNm}]]</h2>
 			<div class="ptag-container">
 				<span>[[${navigator}]]</span>
