"feat: loading is added"

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -71,6 +71,10 @@
 		<!-- chartjs library for making a charts --> 
 		<script src="js/chart.js"></script>
 
+		<!-- spin js library-->
+		<script src="js/spin.js"></script>
+		<link href="css/spin.css" rel="stylesheet"> </link>
+
 		<style>
 			@import url("css/inter.css");
 			
