sleep 5초, 업로드 option 수정

--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -158,7 +158,7 @@
 
 			var dropdown = $("#cmbUploadFileList");
 			data.forEach(function (item) {
-				var option = $("<option></option>").attr("value", item.seqNo).text(item.tblId);
+				var option = $("<option></option>").attr("value", item.seqNo).text(item.opName);
 				dropdown.append(option);
 			});
 		}
