fix: 마이페이지 포커싱, resultMessage 수정

--- a/src/main/resources/templates/views/user/myPage.html
+++ b/src/main/resources/templates/views/user/myPage.html
@@ -503,10 +503,11 @@
 								window.location.href="/";
 							}
 							else if(result.data.resultCode == "300"){
-								alert( "Update Fail Error : " + result.data.resultMessage );
+								alert( result.data.resultMessage );
 							}
-							else if(result.data.resultCode == "400"){
-								alert( "Update Fail Error : " + result.data.resultMessage );
+							else if(result.data.resultCode == "400"){ // 사용자가 입력한 비밀번호가 DB와 일치하지 않을 때 
+								alert( result.data.resultMessage );
+								$("#userPassword").focus();
 							}							
 							break;
 						case "changeMyPassword" :
@@ -516,10 +517,11 @@
 								window.location.href="/";
 							}
 							else if(result.data.resultCode == "300"){
-								alert( "Change Fail Error : " + result.data.resultMessage );
+								alert( result.data.resultMessage );
 							}
-							else if(result.data.resultCode == "400"){
-								alert( "Change Fail Error : " + result.data.resultMessage );
+							else if(result.data.resultCode == "400"){ // 사용자가 입력한 비밀번호가 DB와 일치하지 않을 때 
+								alert( result.data.resultMessage );
+								$("#userCurrentPassword").focus();
 							}
 							break;
 					}
