--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -424,7 +424,7 @@
 								id			: "ExecuteList"
 							,	type		: "post"
 							,	url 		: url
-							,	async		: true
+							,	async		: false
 							,	dataType	: "text"
 							,	contentType	: "application/json; charset=utf-8"
 							,	data		: input
@@ -462,7 +462,6 @@
 				fn_sleep().then(() => {
 					alert("Successfully Execution.");
 				});
-				
 			}
 		});
 	</script>
