--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -34,10 +34,12 @@
 					</div>
 					<form id="loginForm" name="loginForm" method="post" action="/auth/adamsLogin" autocomplete="off" onsubmit="return false;">
 						<input type="hidden" th:name="${csrfParameterName}" th:value="${csrfToken}" />
+						<!--
 						<div class="form-floating mb-2">
 							<select class="form-select" id="csNo" style="padding-left: 15px"></select>
 							<label for="csNo">Please change this option if you need to check.</label>
 						</div>
+						-->
 						<div class="form-floating mb-2">
 							<input type="email" class="form-control" id="inpUsrId" name="inpUsrId" minLength="8" maxLength="50" placeholder="Administrator ID" autocomplete="off" required>
 							<label for="inpUsrId">Administrator ID</label>
@@ -82,23 +84,23 @@
 		        csrfHeader = "X-CSRF-Token";
 		        
 				console.log("Document is ready.");
-				getCsNoList();
+				//getCsNoList();
 				
 				$("#signIn").click(login);
 				
 			});
 
 			function login() {
-				var vCsNo		 = $("#csNo").val(); 
+				//var vCsNo		 = $("#csNo").val(); 
 				var vUsrId       = $("#inpUsrId").val();
 				var vUsrPassword = $("#inpUsrPassword").val();
-				
+				/*
 				if ( isNull(vCsNo) == "" ) {
 		            alert("Choose a company.");
 		            $("#csNo").focus();
 		    		return false;
 		    	}
-
+				*/
 		    	if ( isNull(vUsrId) == "" ) {
 		            alert("Enter your e-mail.");
 		            $("#inpUsrId").focus();
@@ -121,12 +123,12 @@
 
 				$.ajax({
 					type: "post",
-					url: "/auth/adamsLogin",
+					url: "/auth/adminLogin",
 					async: true,
 					dataType: "json",
 					contentType: "application/json; charset=utf-8",
 					data: JSON.stringify({
-						csNo: vCsNo,
+						//csNo: vCsNo,
 						usrId: vUsrId,
 						usrPassword: vUsrPassword
 					}),
@@ -149,10 +151,10 @@
 							$("#pageName").val(data.redirectUrl);
 							$("#form").submit();
 						} else {
-							$("#csNo").val("");
+							//$("#csNo").val("");
 							$("#inpUsrId").val("");
 							$("#inpUsrPassword").val("");
-							$("#csNo").focus();
+							//$("#csNo").focus();
 						}
 					},
 					error: function (xhr, status, error) {
