--- a/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
+++ b/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
@@ -265,18 +265,22 @@
 		function fn_callback(result){
 		   console.log("fn_callback : " + result.id);
 			 if( result.resultCd == "S" ){
-					
+					let resultData = typeof result.data === "string" ? JSON.parse(result.data) : result.data;					
 				 switch (result.id){
 					 case "SelectList" :
 						 
-						 fn_setGrid(result.data);
+						 fn_setGrid(resultData);
 						 
 					 break;
 					 case "ExecuteList" :
-						 alert("Successfully Reconciled");
-						 console.log("executeList case");
-						 main();
-					 break;
+						if ( resultData.resultCode == "200" ) {
+							alert("Successfully Reconciled");
+							console.log("executeList case");
+							main();
+						} else {
+							alert( "Save Fail Error : " + result.data.resultMessage );
+						}
+					break;
 				 }	  
 			 } else if( result.resultCd == "E") {
 				 
