--- a/src/main/resources/templates/views/biz/ins/BIZINS002M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS002M0.html
@@ -262,18 +262,23 @@
 		function fn_callback(result){
 			console.log("fn_callback : " + result.id);
 				if( result.resultCd == "S" ){
-					
+					let resultData = typeof result.data === "string" ? JSON.parse(result.data) : result.data;
 					switch (result.id){
 						case "SelectList" :
 							
-							fn_setGrid(result.data);
+							fn_setGrid(resultData);
 							
 							break;
 						case "ExecuteList" :
 							console.log("executeList case");
-							alert("Successfully Calculated!");
-							main();
-							break;
+							if ( resultData.resultCode == "200" ) {
+								alert("Successfully Calculated!");
+								main();
+							} else {
+								alert( "Save Fail Error : " + result.data.resultMessage );
+							}
+							
+						break;
 					}
 				} else if( result.resultCd == "E") {
 				} else {
