--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -266,21 +266,34 @@
 		function fn_callback(result){
 			//console.log("fn_callback : " + result.id);
 			if( result.resultCd == "S" ){
+				let resultData = typeof result.data === "string" ? JSON.parse(result.data) : result.data;
 				switch (result.id){
 					case "SelectList" :
-						fn_setGrid(result.data);
+						fn_setGrid(resultData);
 						break;
 					case "insertList" :
+						if ( resultData.resultCode == "200" ) {
 						alert("Successfully Insert");
 						main();
+						} else {
+							alert( "Save Fail Error : " + result.data.resultMessage );
+						}
 						break;
 					case "updateList" :
+						if ( resultData.resultCode == "200" ) {
 						alert("Successfully Updated");
 						main();
+						} else {
+							alert( "Save Fail Error : " + result.data.resultMessage );
+						}
 						break;
 					case "deleteList" :
+						if ( resultData.resultCode == "200" ) {
 						alert("Successfully Deleted");
 						main();
+						} else {
+							alert( "Save Fail Error : " + result.data.resultMessage );
+						}
 						break;
 				}
 			} else if( result.resultCd == "E") {
