--- a/src/main/resources/templates/views/opn/srv/OPNSRV001M0.html
+++ b/src/main/resources/templates/views/opn/srv/OPNSRV001M0.html
@@ -274,7 +274,7 @@
 					switch (result.id) {
 						case "SelectList":
 							
-							fn_setGrid(result.data);
+							fn_setGrid(resultData);
 							
 						break;
 						case "SelectHistList":
@@ -287,7 +287,7 @@
 								alert("Successfully Inserted");
 								main();
 							} else {
-								alert( "Save Fail Error : " + result.data.resultMessage );
+								alert( "Save Fail Error : " + resultData.resultMessage );
 							}
 							
 						break;
@@ -297,7 +297,7 @@
 								alert("Successfully Updated");
 								main();
 							} else {
-								alert( "Save Fail Error : " + result.data.resultMessage );
+								alert( "Save Fail Error : " + resultData.resultMessage );
 							}
 							
 						break;
