--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -23,15 +23,15 @@
 	<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 		<div class="page page-center">
     		<div class="container container-tight">
-    			<div class="text-center mb-5">
+    			<div class="text-center mb-4">
 					<span class="navbar-brand" data-bs-toggle="tooltip" data-bs-placement="top" title="Cloud IFRS17 Closing Services">
 					<span style="font-style: italic; font-size: 2em; font-family: Times New Roman; color: #0054a6;">i</span><span style="font-size: 2em; color: #0054a6;">Frame 2.0</span></span>
 				</div>
 			    <form class="card card-md" id="resetPasswordForm" name="resetPasswordForm" method="post" action="/auth/adamsFindPw" autocomplete="off" onsubmit="return false;">
 			    	<input type="hidden" th:name="${csrfParameterName}" th:value="${csrfToken}" />
-					<div class="card-body">
-						<h2 class="card-title text-center mb-4">Forgot password</h2>
-						<p class="text-secondary mb-4">Please submit your information. We will reset your password and send you a temporary password by e-mail.</p>
+					<div class="card-body text-center">
+						<span class="fs-1 fw-bold">Forgot password</span>
+						<p class="text-secondary mt-3 mb-4">Please submit the information below. We will reset your password and send you a temporary one by e-mail.</p>
 
 						<div class="form-floating mb-2">
 							<select class="form-select" id="companyDivision" name="companyDivision" autocomplete="off" required>
@@ -115,47 +115,51 @@
     		return;
     	}
     	
-    	const requestData = {
-              compNoDvCd : vCompNoDvCd
-            , compNo     : vCompNo
-            , usrId      : vUsrId
-            , usrPhNo    : vUsrPhNo
-        };
+    	var cfm_notice = confirm("Do you want to send a request to reset your password?");
+    	
+		if (cfm_notice) {
 
-        $.ajax({
-            type: "post",
-            url: "/auth/adamsFindPw",
-            async: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            data: JSON.stringify(requestData),
-            beforeSend: function (xhr) {
-	            // 헤더에 CSRF 토큰을 포함
-	            xhr.setRequestHeader(csrfHeader, csrfToken);
-	        },
-            success: function (data) {
-                
-            	if ( data.resultCode == "200" ) {
-	            	//alert("비밀번호 초기화 신청이 완료되었습니다. 이메일로 임시 비밀번호가 전송됩니다.");
-	                alert("Your request has been sent successfully. Please check your e-mail in a few minutes.");
+	    	const requestData = {
+	              compNoDvCd : vCompNoDvCd
+	            , compNo     : vCompNo
+	            , usrId      : vUsrId
+	            , usrPhNo    : vUsrPhNo
+	        };
 	
-					console.log("AJAX request successful. Data received:", data);
-					
-					$("#pageName").val(data.redirectUrl);
-					$("#form").submit();
-            	} else {
-	            	//alert("입력한 정보를 확인하세요. 이 메시지가 계속 표시되면 관리자에게 문의하세요.");
-	                alert("Please check the information you entered. If you continue to see this message, please contact your administrator.");
+	        $.ajax({
+	            type: "post",
+	            url: "/auth/adamsFindPw",
+	            async: false,
+	            dataType: "json",
+	            contentType: "application/json; charset=utf-8",
+	            data: JSON.stringify(requestData),
+	            beforeSend: function (xhr) {
+		            // 헤더에 CSRF 토큰을 포함
+		            xhr.setRequestHeader(csrfHeader, csrfToken);
+		        },
+	            success: function (data) {
 	                
-					console.log("AJAX request fail. Data received:", data);
-            	}
-            },
-            error: function (xhr, status, error) {
-                //alert("오류가 발생했습니다. 다시 시도해주세요.");
-                //alert("An error occurred. Please try again.");
-            	gf_errorHandler(xhr);
-            }
-        });
+	            	if ( data.resultCode == "200" ) {
+		                alert("Your request has been sent successfully. Please check your e-mail in a few minutes.");
+		
+						console.log("AJAX request successful. Data received:", data);
+						
+						$("#pageName").val(data.redirectUrl);
+						$("#form").submit();
+	            	} else {
+		                alert("Your request has NOT been processed.Please check the values you entered.");
+		                
+						console.log("AJAX request fail. Data received:", data);
+	            	}
+	            },
+	            error: function (xhr, status, error) {
+	            	alert("Your request has NOT been processed. Please check the values you entered and try again.");
+	            	gf_errorHandler(xhr);
+	            }
+	        });
+		} else {
+			return false;
+		}
     }
 
 	function goMenuPage (pageName) {
